--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "webpack": "^5.64.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.5.0"
+  },
+  "dependencies": {
+    "pubsub-js": "^1.9.4"
   }
 }
