--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-dev-server": "^4.5.0"
   },
   "dependencies": {
-    "pubsub-js": "^1.9.4"
+    "pubsub-js": "^1.9.4",
+    "uuid": "^8.3.2"
   }
 }
